<resources>
    <string name="app_name">Basic Samples</string>
    <string name="button_wipe_data">Wipe Customer data</string>
    <string name="dbflow">DBFlow</string>
    <string name="button_save">Save</string>
    <string name="edittext_fullname">Enter customer full name</string>
    <string name="edittext_age">Enter customer age</string>
    <string name="nothing_to_show">Nothing to show :(</string>
    <string name="button_update">Update</string>
    <string name="button_delete">Delete</string>
    <string name="edittext_id">Enter an Id</string>
    <string name="button_read">Read</string>
    <string name="button_basic_crud">Basic CRUD</string>
</resources>
